[gd_scene load_steps=49 format=3 uid="uid://dcoru4ru24o04"]

[ext_resource type="Script" path="res://Scripts/PlayerMovement.gd" id="1_wj2id"]
[ext_resource type="Texture2D" uid="uid://bwymife0cgidb" path="res://Sprites/Personagem/Attack-01-Sheet.png" id="2_yf24i"]
[ext_resource type="Texture2D" uid="uid://034lvo8qi0cp" path="res://Sprites/Personagem/Dead-Sheet.png" id="3_0h1st"]
[ext_resource type="Texture2D" uid="uid://bcx7up4kwa754" path="res://Sprites/Personagem/Idle-Sheet.png" id="4_rrn7l"]
[ext_resource type="Texture2D" uid="uid://dsk5lgvb0tt1i" path="res://Sprites/Personagem/Jump-All-Sheet.png" id="5_2wdmu"]
[ext_resource type="Texture2D" uid="uid://ci4ofrbtnixtf" path="res://Sprites/Personagem/Run-Sheet.png" id="6_yk1ln"]
[ext_resource type="Script" path="res://Scripts/FlashSprite.gd" id="7_4vc8b"]
[ext_resource type="Script" path="res://Scripts/LifeController.gd" id="8_j6hsj"]
[ext_resource type="Script" path="res://Scripts/Hurtbox.gd" id="9_ppkoe"]
[ext_resource type="Script" path="res://Scripts/Hitbox.gd" id="10_xrp5m"]
[ext_resource type="AudioStream" uid="uid://bhaski84tdqlm" path="res://Sons/03_Step_grass_03.wav" id="11_3ynh3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_if1qv"]
radius = 7.0
height = 48.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dkln7"]
atlas = ExtResource("2_yf24i")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tciq7"]
atlas = ExtResource("2_yf24i")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g8axc"]
atlas = ExtResource("2_yf24i")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yx7s6"]
atlas = ExtResource("2_yf24i")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3vnr"]
atlas = ExtResource("2_yf24i")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ou5t"]
atlas = ExtResource("2_yf24i")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j5vo"]
atlas = ExtResource("2_yf24i")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfo7f"]
atlas = ExtResource("2_yf24i")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_33vgs"]
atlas = ExtResource("3_0h1st")
region = Rect2(0, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_chjb7"]
atlas = ExtResource("3_0h1st")
region = Rect2(80, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7n0f"]
atlas = ExtResource("3_0h1st")
region = Rect2(160, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_04b8o"]
atlas = ExtResource("3_0h1st")
region = Rect2(240, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yat2q"]
atlas = ExtResource("3_0h1st")
region = Rect2(320, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oofgn"]
atlas = ExtResource("3_0h1st")
region = Rect2(400, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nijx"]
atlas = ExtResource("3_0h1st")
region = Rect2(480, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xramr"]
atlas = ExtResource("3_0h1st")
region = Rect2(560, 0, 80, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y04ps"]
atlas = ExtResource("4_rrn7l")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek7s2"]
atlas = ExtResource("4_rrn7l")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3u8n"]
atlas = ExtResource("4_rrn7l")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2c67"]
atlas = ExtResource("4_rrn7l")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_36xqa"]
atlas = ExtResource("5_2wdmu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gq8f"]
atlas = ExtResource("5_2wdmu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdvdk"]
atlas = ExtResource("5_2wdmu")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hd6"]
atlas = ExtResource("5_2wdmu")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5chns"]
atlas = ExtResource("5_2wdmu")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_53vc8"]
atlas = ExtResource("6_yk1ln")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6bfp"]
atlas = ExtResource("6_yk1ln")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncvvf"]
atlas = ExtResource("6_yk1ln")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktmdj"]
atlas = ExtResource("6_yk1ln")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xtfx"]
atlas = ExtResource("6_yk1ln")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ovib"]
atlas = ExtResource("6_yk1ln")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhc6k"]
atlas = ExtResource("6_yk1ln")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e52j"]
atlas = ExtResource("6_yk1ln")
region = Rect2(560, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_fdhdd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkln7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tciq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g8axc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yx7s6")
}],
"loop": false,
"name": &"Attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3vnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ou5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j5vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfo7f")
}],
"loop": false,
"name": &"Attack2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33vgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chjb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7n0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04b8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yat2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oofgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nijx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xramr")
}],
"loop": false,
"name": &"Die",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y04ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek7s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3u8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2c67")
}],
"loop": true,
"name": &"Idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36xqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gq8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdvdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5chns")
}],
"loop": false,
"name": &"Jump",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53vc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6bfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncvvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktmdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xtfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ovib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhc6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e52j")
}],
"loop": true,
"name": &"Run",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vhmxd"]
radius = 7.0
height = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktpjh"]
size = Vector2(32.5, 46.5)

[node name="Player" type="CharacterBody2D"]
position = Vector2(37, -2)
collision_mask = 2
script = ExtResource("1_wj2id")

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyotteTime" type="Timer" parent="."]
wait_time = 0.2

[node name="AttackBuffer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_if1qv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("lifeController")]
sprite_frames = SubResource("SpriteFrames_fdhdd")
animation = &"Attack1"
autoplay = "Idle"
frame = 3
frame_progress = 1.0
script = ExtResource("7_4vc8b")
flashColor = Color(100, 100, 100, 1)
lifeController = NodePath("../LifeController")

[node name="Timer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.1
one_shot = true

[node name="LifeController" type="Node2D" parent="."]
script = ExtResource("8_j6hsj")
_vidaMax = 5

[node name="PlayerHurtbox" type="Area2D" parent="." node_paths=PackedStringArray("lifeController")]
collision_layer = 4
collision_mask = 4
script = ExtResource("9_ppkoe")
lifeController = NodePath("../LifeController")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHurtbox"]
shape = SubResource("CapsuleShape2D_vhmxd")

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5
script = ExtResource("10_xrp5m")
dano = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2(27.25, 0.25)
shape = SubResource("RectangleShape2D_ktpjh")
disabled = true

[node name="Som" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_3ynh3")

[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="CoyotteTime" to="." method="_on_coyotte_time_timeout"]
[connection signal="timeout" from="AttackBuffer" to="." method="_on_attack_buffer_timeout"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="AnimatedSprite2D/Timer" to="AnimatedSprite2D" method="_on_timer_timeout"]
[connection signal="area_entered" from="PlayerHurtbox" to="PlayerHurtbox" method="_on_area_entered"]
